--- a/cp-07.ipynb
+++ b/cp-07.ipynb
@@ -826,22 +826,24 @@
    "outputs": [],
    "source": [
     "plt.axis([0,5,0,20])\n",
-    "...: plt.title('My first plot',fontsize=20,fontname='Times New Roman')\n",
-    "...: plt.xlabel('Counting',color='gray')\n",
-    "...: plt.ylabel('Square values',color='gray')\n",
-    "...: plt.text(1,1.5,'First')\n",
-    "...: plt.text(2,4.5,'Second')\n",
-    "...: plt.text(3,9.5,'Third')\n",
-    "...: plt.text(4,16.5,'Fourth')\n",
-    "...: plt.text(1.1,12,r'$y = x^2$',fontsize=20,bbox={'facecolor':'yellow',\n",
-    "'alpha':0.2})\n",
-    "...: plt.plot([1,2,3,4],[1,4,9,16],'ro')"
+    "plt.title('My first plot',fontsize=20,fontname='Times New Roman')\n",
+    "plt.xlabel('Counting',color='gray')\n",
+    "plt.ylabel('Square values',color='gray')\n",
+    "plt.text(1,1.5,'First')\n",
+    "plt.text(2,4.5,'Second')\n",
+    "plt.text(3,9.5,'Third')\n",
+    "plt.text(4,16.5,'Fourth')\n",
+    "plt.text(1.1,12,r'$y = x^2$',fontsize=20,bbox={'facecolor': 'yellow', 'alpha':0.2})\n",
+    "plt.plot([1,2,3,4],[1,4,9,16],'ro')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "To get a complete view on the potential offered by LaTeX, consult Appendix A of\n",
+    "this book."
+   ]
   },
   {
    "cell_type": "markdown",
