--- a/cp-07.ipynb
+++ b/cp-07.ipynb
@@ -848,12 +848,39 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### Adding a Grid"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Another element you can add to a plot is a grid. Often its addition is necessary in order to\n",
+    "better understand the position occupied by each point on the chart.\n",
+    "\n",
+    "Adding a grid to a chart is a very simple operation: just add the grid() function,\n",
+    "passing True as an argument"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.axis([0,5,0,20])\n",
+    "plt.title('My first plot',fontsize=20,fontname='Times New Roman')\n",
+    "plt.xlabel('Counting',color='gray')\n",
+    "plt.ylabel('Square values',color='gray')\n",
+    "plt.text(1,1.5,'First')\n",
+    "plt.text(2,4.5,'Second')\n",
+    "plt.text(3,9.5,'Third')\n",
+    "plt.text(4,16.5,'Fourth')\n",
+    "plt.text(1.1,12,r'$y = x^2$',fontsize=20,bbox={'facecolor':'yellow','alpha':0.2})\n",
+    "plt.grid(True)\n",
+    "plt.plot([1,2,3,4],[1,4,9,16],'ro')"
+   ]
   },
   {
    "cell_type": "markdown",
