--- a/cp-07.ipynb
+++ b/cp-07.ipynb
@@ -885,12 +885,40 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### Adding a Legend"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Another very important component that should be present in any chart is the legend.\n",
+    "pyplot also provides a specific function for this type of object: legend().\n",
+    "\n",
+    "Add a legend to your chart with the legend() function and a string indicating the\n",
+    "words with which you want the series to be shown. In this example, you assign the First\n",
+    "series name to the input data array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.axis([0,5,0,20])\n",
+    "plt.title('My first plot',fontsize=20,fontname='Times New Roman')\n",
+    "plt.xlabel('Counting',color='gray')\n",
+    "plt.ylabel('Square values',color='gray')\n",
+    "plt.text(2,4.5,'Second')\n",
+    "plt.text(3,9.5,'Third')\n",
+    "plt.text(4,16.5,'Fourth')\n",
+    "plt.text(1.1,12,'$y = x^2$',fontsize=20,bbox={'facecolor':'yellow','alpha':0.2})\n",
+    "plt.grid(True)\n",
+    "plt.plot([1,2,3,4],[1,4,9,16],'ro')\n",
+    "plt.legend(['First series'])"
+   ]
   },
   {
    "cell_type": "markdown",
