--- a/cp-07.ipynb
+++ b/cp-07.ipynb
@@ -923,6 +923,63 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "As you can see in Figure 7-19, the legend is added in the upper-right corner by\n",
+    "default. Again if you want to change this behavior you will need to add a few kwargs. For\n",
+    "example, the position occupied by the legend is set by assigning numbers from 0 to 10 to\n",
+    "the loc kwarg. Each of these numbers characterizes one of the corners of the chart\n",
+    "(see Table 7-1). A value of 1 is the default, that is, the upper-right corner. In the next\n",
+    "example, you will move the legend in the upper-left corner so it will not overlap with the\n",
+    "points represented in the plot."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "|Location Code | Location String|\n",
+    "\n",
+    "|0 best\n",
+    "|1 upper-right\n",
+    "|2 upper-left\n",
+    "|3 lower-right\n",
+    "|4 lower-left\n",
+    "|5 right\n",
+    "|6 center-left\n",
+    "|7 center-right\n",
+    "|8 lower-center\n",
+    "|9 upper-center\n",
+    "|10 center"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   },
   {
