--- a/cp-07.ipynb
+++ b/cp-07.ipynb
@@ -938,24 +938,34 @@
    "metadata": {},
    "source": [
     "|Location Code | Location String|\n",
-    "\n",
-    "|0 best\n",
-    "|1 upper-right\n",
-    "|2 upper-left\n",
-    "|3 lower-right\n",
-    "|4 lower-left\n",
-    "|5 right\n",
-    "|6 center-left\n",
-    "|7 center-right\n",
-    "|8 lower-center\n",
-    "|9 upper-center\n",
-    "|10 center"
+    "|---|---|\n",
+    "|0 | best|\n",
+    "|1 | upper-right|\n",
+    "|2 | upper-left|\n",
+    "|3 | lower-right|\n",
+    "|4 | lower-left|\n",
+    "|5 | right|\n",
+    "|6 | center-left|\n",
+    "|7 | center-right|\n",
+    "|8 | lower-center|\n",
+    "|9 | upper-center|\n",
+    "|10 | center|"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Before you begin to modify the code to move the legend, I want to add a small notice.\n",
+    "Generally, the legends are used to indicate the definition of a series to the reader via\n",
+    "a label associated with a color and/or a marker that distinguishes it in the plot. So far\n",
+    "in the examples, you have used a single series that was expressed by a single plot()\n",
+    "function. Now, you have to focus on a more general case in which the same plot shows\n",
+    "more series simultaneously. Each series in the chart will be characterized by a specific\n",
+    "color and a specific marker (see Figure 7-20). In terms of code, instead, each series will be\n",
+    "characterized by a call to the plot() function and the order in which they are defined will\n",
+    "correspond to the order of the text labels passed as an argument to the legend() function."
+   ]
   },
   {
    "cell_type": "markdown",
