--- a/cp-07.ipynb
+++ b/cp-07.ipynb
@@ -968,14 +968,46 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "plt.axis([0,5,0,20])\n",
+    "plt.title('My first plot',fontsize=20,fontname='Times New Roman')\n",
+    "plt.xlabel('Counting',color='gray')\n",
+    "plt.ylabel('Square values',color='gray')\n",
+    "plt.text(1,1.5,'First')\n",
+    "plt.text(2,4.5,'Second')\n",
+    "plt.text(3,9.5,'Third')\n",
+    "plt.text(4,16.5,'Fourth')\n",
+    "plt.text(1.1,12,'$y = x^2$',fontsize=20,bbox={'facecolor':'yellow','alpha':0.2})\n",
+    "plt.grid(True)\n",
+    "plt.plot([1,2,3,4],[1,4,9,16],'ro')\n",
+    "plt.plot([1,2,3,4],[0.8,3.5,8,15],'g^')\n",
+    "plt.plot([1,2,3,4],[0.5,2.5,4,12],'b*')\n",
+    "plt.legend(['First series','Second series','Third series'],loc=2)"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### Saving Your Charts"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this section you will learn how to save your chart in different ways depending on your\n",
+    "needs. If you need to reproduce your chart in different notebooks or Python sessions, or\n",
+    "reuse them in future projects, it is a good practice to save the Python code. On the other\n",
+    "hand, if you need to make reports or presentations, it can be very useful to save your\n",
+    "chart as an image. Moreover, it is possible to save your chart as a HTML page, and this\n",
+    "could be very useful when you need to share your work on Web."
+   ]
   },
   {
    "cell_type": "markdown",
