--- a/cp-07.ipynb
+++ b/cp-07.ipynb
@@ -1012,6 +1012,76 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "#### Saving the Code"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As you can see from the examples in the previous sections, the code concerning the\n",
+    "representation of a single chart is growing into a fair number of rows. Once you think\n",
+    "you’ve reached a good point in your development process, you can choose to save all\n",
+    "rows of code in a .py file that you can recall at any time."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can use the magic command save% followed by the name of the file you want to\n",
+    "save followed by the number of input prompts containing the row of code that you want\n",
+    "to save. If all the code is written in only one prompt, as your case, you have to add only\n",
+    "its number; otherwise if you want to save the code written in many prompts, for example\n",
+    "from 10 to 20, you have to indicate this range with the two numbers separated by a -, that\n",
+    "is, 10-20."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In your case, you would save the Python code underlying the representation of your\n",
+    "first chart contained into the input prompt with the number 171."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You need to insert the following command to save the code into a new .py file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%save my_first_chart 171"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After you launch the command, you will find the my_first_chart.py file in your\n",
+    "working directory"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   },
   {
