--- a/cp-07.ipynb
+++ b/cp-07.ipynb
@@ -1080,6 +1080,76 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# my_first_chart.py\n",
+    "\n",
+    "# coding: utf-8\n",
+    "import matplotlib.pyplot as plt\n",
+    "plt.axis([0,5,0,20])\n",
+    "plt.title('My first plot',fontsize=20,fontname='Times New Roman')\n",
+    "plt.xlabel('Counting',color='gray')\n",
+    "plt.ylabel('Square values',color='gray')\n",
+    "plt.text(1,1.5,'First')\n",
+    "plt.text(2,4.5,'Second')\n",
+    "plt.text(3,9.5,'Third')\n",
+    "plt.text(4,16.5,'Fourth')\n",
+    "plt.text(1.1,12,'$y = x^2$',fontsize=20,bbox={'facecolor':'yellow', 'alpha':0.2})\n",
+    "plt.grid(True)\n",
+    "plt.plot([1,2,3,4],[1,4,9,16],'ro')\n",
+    "plt.plot([1,2,3,4],[0.8,3.5,8,15],'g^')\n",
+    "plt.plot([1,2,3,4],[0.5,2.5,4,12],'b*')\n",
+    "plt.legend(['First series','Second series','Third series'],loc=2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Later, when you open a new IPython session, you will have your chart and start to\n",
+    "change the code at the point where you had saved it by entering the following command:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ipython qtconsole --matplotlib inline -m my_first_chart.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Or you can reload the entire code in a single prompt in the QtConsole using the\n",
+    "magic command %load."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load my_first_chart.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": []
