--- a/cp-07.ipynb
+++ b/cp-07.ipynb
@@ -1142,6 +1142,63 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "Or you can run it during a session with the magic command %run."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%run my_first_chart.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Converting Your Session to an HTML File"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using the IPython QtConsole, you can convert all the code and graphics present in your\n",
+    "current session to an HTML page. Simply choose File-->Save to HTML/XHTML from the\n",
+    "menu"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You will be asked to save your session in two different formats: HTML and\n",
+    "XHMTL. The difference between the two formats is based on the image conversion type.\n",
+    "If you select HTML as the output file format, the images contained in your session will\n",
+    "be converted to PNG format. If you select XHTML as the output file format instead, the\n",
+    "images will be converted to SVG format."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "By choosing the external option, the images will be collected into a directory called\n",
+    "my_session_files. By choosing inline, the graphical information concerning the image\n",
+    "is embedded into the HTML code."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   },
   {
