--- a/cp-07.ipynb
+++ b/cp-07.ipynb
@@ -1194,12 +1194,43 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### Saving Your Chart Directly as an Image"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "If you are interested in saving only the figure of a chart as an image file, ignoring all\n",
+    "the code you’ve written during the session, this is also possible. In fact, thanks to\n",
+    "the savefig() function, you can directly save the chart in a PNG format, although\n",
+    "you should take care to add this function to the end of the same series of commands\n",
+    "(otherwise you’ll get a blank PNG file)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.axis([0,5,0,20])\n",
+    "plt.title('My first plot',fontsize=20,fontname='Times New Roman')\n",
+    "plt.xlabel('Counting',color='gray')\n",
+    "plt.ylabel('Square values',color='gray')\n",
+    "plt.text(1,1.5,'First')\n",
+    "plt.text(2,4.5,'Second')\n",
+    "plt.text(3,9.5,'Third')\n",
+    "plt.text(4,16.5,'Fourth')\n",
+    "plt.text(1.1,12,'$y = x^2$',fontsize=20,bbox={'facecolor':'yellow','alpha':0.2})\n",
+    "plt.grid(True)\n",
+    "plt.plot([1,2,3,4],[1,4,9,16],'ro')\n",
+    "plt.plot([1,2,3,4],[0.8,3.5,8,15],'g^')\n",
+    "plt.plot([1,2,3,4],[0.5,2.5,4,12],'b*')\n",
+    "plt.legend(['First series','Second series','Third series'],loc=2)\n",
+    "plt.savefig('my_chart.png')"
+   ]
   },
   {
    "cell_type": "markdown",
