--- a/cp-07.ipynb
+++ b/cp-07.ipynb
@@ -1235,17 +1235,46 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Executing the previous code, a new file will be created in your working directory.\n",
+    "This file will be named my_chart.png and will contain the image of your chart."
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "#### Handling Date Values"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "One of the most common problems encountered when doing data analysis is handling\n",
+    "data of the date-time type. Displaying that data along an axis (normally the x-axis) can be\n",
+    "problematic, especially when managing ticks\n",
+    "\n",
+    "Take for example the display of a linear chart with a dataset of eight points in which\n",
+    "you have to represent date values on the x-axis with the following format: day-month-year."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import datetime\n",
+    " import numpy as np\n",
+    " import matplotlib.pyplot as plt\n",
+    " events = [datetime.date(2015,1,23),datetime.\n",
+    "date(2015,1,28),datetime.date(2015,2,3),datetime.\n",
+    "date(2015,2,21),datetime.date(2015,3,15),datetime.\n",
+    "date(2015,3,24),datetime.date(2015,4,8),datetime.date(2015,4,24)]\n",
+    "...: readings = [12,22,25,20,18,15,17,14]\n",
+    "...: plt.plot(events,readings)"
+   ]
   },
   {
    "cell_type": "markdown",
