--- a/cp-07.ipynb
+++ b/cp-07.ipynb
@@ -1385,6 +1385,69 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "\n",
+    "x = np.arange(-2*np.pi,2*np.pi,0.01)\n",
+    "y = np.sin(3*x)/x\n",
+    "plt.plot(x,y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now you can extend the case in which you want to display a family of functions, such\n",
+    "as this:\n",
+    "\n",
+    "y = sin (n * x) / x\n",
+    "\n",
+    "varying the parameter n."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "...: import numpy as np\n",
+    "...: x = np.arange(-2*np.pi,2*np.pi,0.01)\n",
+    "...: y = np.sin(3*x)/x\n",
+    "...: y2 = np.sin(2*x)/x\n",
+    "...: y3 = np.sin(3*x)/x\n",
+    "...: plt.plot(x,y)\n",
+    "...: plt.plot(x,y2)\n",
+    "...: plt.plot(x,y3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": []
