--- a/cp-07.ipynb
+++ b/cp-07.ipynb
@@ -1417,20 +1417,52 @@
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
-    "...: import numpy as np\n",
-    "...: x = np.arange(-2*np.pi,2*np.pi,0.01)\n",
-    "...: y = np.sin(3*x)/x\n",
-    "...: y2 = np.sin(2*x)/x\n",
-    "...: y3 = np.sin(3*x)/x\n",
-    "...: plt.plot(x,y)\n",
-    "...: plt.plot(x,y2)\n",
-    "...: plt.plot(x,y3)"
+    "import numpy as np\n",
+    "\n",
+    "x = np.arange(-2*np.pi,2*np.pi,0.01)\n",
+    "y = np.sin(3*x)/x\n",
+    "y2 = np.sin(2*x)/x\n",
+    "y3 = np.sin(3*x)/x\n",
+    "\n",
+    "plt.plot(x,y)\n",
+    "plt.plot(x,y2)\n",
+    "plt.plot(x,y3)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "As you can see in Figure 7-27, a different color is automatically assigned to each line.\n",
+    "All the plots are represented on the same scale; that is, the data points of each series refer\n",
+    "to the same x-axis and y-axis. This is because each call of the plot() function takes into\n",
+    "account the previous calls to same function, so the Figure applies the changes keeping\n",
+    "memory of the previous commands until the Figure is not displayed (using show() with\n",
+    "Python and Enter with the IPython QtConsole).\n",
+    "\n",
+    "As you saw in the previous sections, regardless of the default settings, you can select\n",
+    "the type of stroke, color, etc. As the third argument of the plot() function you can\n",
+    "specify some codes that correspond to the color (see Table 7-2) and other codes that\n",
+    "correspond to line styles, all included in the same string. Another possibility is to use\n",
+    "two kwargs separately, color to define the color, and linestyle to define the stroke"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "...: import numpy as np\n",
+    "...: x = np.arange(-2*np.pi,2*np.pi,0.01)\n",
+    "...: y = np.sin(3*x)/x\n",
+    "...: y2 = np.sin(2*x)/x\n",
+    "...: y3 = np.sin(3*x)/x\n",
+    "...: plt.plot(x,y,'k--',linewidth=3)\n",
+    "...: plt.plot(x,y2,'m-.')\n",
+    "...: plt.plot(x,y3,color='#87a3cc',linestyle='--')"
+   ]
   },
   {
    "cell_type": "markdown",
