--- a/cp-07.ipynb
+++ b/cp-07.ipynb
@@ -1454,14 +1454,34 @@
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
-    "...: import numpy as np\n",
-    "...: x = np.arange(-2*np.pi,2*np.pi,0.01)\n",
-    "...: y = np.sin(3*x)/x\n",
-    "...: y2 = np.sin(2*x)/x\n",
-    "...: y3 = np.sin(3*x)/x\n",
-    "...: plt.plot(x,y,'k--',linewidth=3)\n",
-    "...: plt.plot(x,y2,'m-.')\n",
-    "...: plt.plot(x,y3,color='#87a3cc',linestyle='--')"
+    "import numpy as np\n",
+    "\n",
+    "x = np.arange(-2*np.pi,2*np.pi,0.01)\n",
+    "y = np.sin(3*x)/x\n",
+    "y2 = np.sin(2*x)/x\n",
+    "y3 = np.sin(3*x)/x\n",
+    "\n",
+    "plt.plot(x,y,'k--',linewidth=3)\n",
+    "plt.plot(x,y2,'m-.')\n",
+    "plt.plot(x,y3,color='#87a3cc',linestyle='--')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Color Codes\n",
+    "\n",
+    "|Code Color\n",
+    "|---|---|\n",
+    "|b blue\n",
+    "|g green\n",
+    "|r red\n",
+    "|c cyan\n",
+    "|m magenta\n",
+    "|y yellow\n",
+    "|k black\n",
+    "|w white"
    ]
   },
   {
