--- a/cp-07.ipynb
+++ b/cp-07.ipynb
@@ -1472,22 +1472,50 @@
    "source": [
     "Color Codes\n",
     "\n",
-    "|Code Color\n",
+    "|Code | Color|\n",
     "|---|---|\n",
-    "|b blue\n",
-    "|g green\n",
-    "|r red\n",
-    "|c cyan\n",
-    "|m magenta\n",
-    "|y yellow\n",
-    "|k black\n",
-    "|w white"
+    "|b | blue|\n",
+    "|g | green|\n",
+    "|r | red|\n",
+    "|c | cyan|\n",
+    "|m | magenta|\n",
+    "|y | yellow|\n",
+    "|k | black|\n",
+    "|w | white|"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "You have just defined a range from -2π to 2π on the x-axis, but by default, values on\n",
+    "ticks are shown in numerical form. Therefore you need to replace the numerical values\n",
+    "with multiple of π. You can also replace the ticks on the y-axis. To do all this, you have to\n",
+    "use xticks() and yticks() functions, passing to each of them two lists of values. The\n",
+    "first list contains values corresponding to the positions where the ticks are to be placed,\n",
+    "and the second contains the tick labels. In this particular case, you have to use strings\n",
+    "containing LaTeX format in order to correctly display the symbol π. Remember to define\n",
+    "them within two $ characters and to add a r as the prefix."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "...: import numpy as np\n",
+    "...: x = np.arange(-2*np.pi,2*np.pi,0.01)\n",
+    "...: y = np.sin(3*x)/x\n",
+    "...: y2 = np.sin(2*x)/x\n",
+    "...: y3 = np.sin(x)/x\n",
+    "...: plt.plot(x,y,color='b')\n",
+    "...: plt.plot(x,y2,color='r')\n",
+    "...: plt.plot(x,y3,color='g')\n",
+    "...: plt.xticks([-2*np.pi, -np.pi, 0, np.pi, 2*np.pi],\n",
+    "[r'$-2\\pi$',r'$-\\pi$',r'$0$',r'$+\\pi$',r'$+2\\pi$'])"
+   ]
   },
   {
    "cell_type": "markdown",
