--- a/cp-07.ipynb
+++ b/cp-07.ipynb
@@ -1505,22 +1505,38 @@
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
-    "...: import numpy as np\n",
-    "...: x = np.arange(-2*np.pi,2*np.pi,0.01)\n",
-    "...: y = np.sin(3*x)/x\n",
-    "...: y2 = np.sin(2*x)/x\n",
-    "...: y3 = np.sin(x)/x\n",
-    "...: plt.plot(x,y,color='b')\n",
-    "...: plt.plot(x,y2,color='r')\n",
-    "...: plt.plot(x,y3,color='g')\n",
-    "...: plt.xticks([-2*np.pi, -np.pi, 0, np.pi, 2*np.pi],\n",
-    "[r'$-2\\pi$',r'$-\\pi$',r'$0$',r'$+\\pi$',r'$+2\\pi$'])"
+    "import numpy as np\n",
+    "\n",
+    "x = np.arange(-2*np.pi,2*np.pi,0.01)\n",
+    "y = np.sin(3*x)/x\n",
+    "y2 = np.sin(2*x)/x\n",
+    "y3 = np.sin(x)/x\n",
+    "\n",
+    "plt.plot(x,y,color='b')\n",
+    "plt.plot(x,y2,color='r')\n",
+    "plt.plot(x,y3,color='g')\n",
+    "plt.xticks([-2*np.pi, -np.pi, 0, np.pi, 2*np.pi],\n",
+    "           [r'$-2\\pi$',r'$-\\pi$',r'$0$',r'$+\\pi$',r'$+2\\pi$'])\n",
+    "plt.yticks([-1,0,1,2,3],\n",
+    "           [r'$-1$',r'$0$',r'$+1$',r'$+2$',r'$+3$'])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "In all the linear charts you have seen so far, you always have the x-axis and y-axis\n",
+    "placed at the edge of the figure (corresponding to the sides of the bounding border box).\n",
+    "Another way of displaying axes is to have the two axes passing through the origin (0, 0),\n",
+    "i.e., the two Cartesian axes.\n",
+    "\n",
+    "To do this, you must first capture the Axes object through the gca() function. Then\n",
+    "through this object, you can select each of the four sides making up the bounding box,\n",
+    "specifying for each one its position: right, left, bottom, and top. Crop the sides that do not\n",
+    "match any axis (right and bottom) using the set_color() function and indicating none\n",
+    "for color. Then, the sides corresponding to the x- and y-axes are moved to pass through\n",
+    "the origin (0,0) with the set_position() function."
+   ]
   },
   {
    "cell_type": "markdown",
