--- a/cp-07.ipynb
+++ b/cp-07.ipynb
@@ -269,31 +269,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The pyplot module is a collection of command-style functions that allow you to use\n",
-    "matplotlib much like MATLAB. Each pyplot function will operate or make some changes\n",
-    "to the Figure object, for example, the creation of the Figure itself, the creation of a\n",
-    "plotting area, representation of a line, decoration of the plot with a label, etc.\n",
+    "O módulo pyplot é uma coleção de funções de estilo de comando que permitem que você use\n",
+    "matplotlib muito parecido com o MATLAB. Cada função pyplot irá operar ou fazer algumas alterações\n",
+    "ao objeto Figura, por exemplo, a criação da própria Figura, a criação de um\n",
+    "área de plotagem, representação de uma linha, decoração da plotagem com uma etiqueta, etc.\n",
     "\n",
-    "Pyplot also is stateful, in that it tracks the status of the current figure and its plotting\n",
-    "area. The functions called act on the current figure."
+    "Pyplot também é stateful, pois rastreia o status da figura atual e sua plotagem\n",
+    "área. As funções chamadas agem sobre a figura atual."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### A Simple Interactive Chart"
+    "#### Um gráfico interativo simples"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To get familiar with the matplotlib library and in a particular way with Pyplot, you will\n",
-    "start creating a simple interactive chart. Using matplotlib, this operation is very simple;\n",
-    "in fact, you can achieve it using only three lines of code.\n",
+    "Para se familiarizar com a biblioteca matplotlib e de forma particular com o Pyplot, você irá\n",
+    "comece a criar um gráfico interativo simples. Usando matplotlib, esta operação é muito simples;\n",
+    "na verdade, você pode alcançá-lo usando apenas três linhas de código.\n",
     "\n",
-    "But first you need to import the pyplot package and rename it as plt."
+    "Mas primeiro você precisa importar o pacote pyplot e renomeá-lo como plt."
    ]
   },
   {
@@ -309,18 +309,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In Python, the constructors generally are not necessary; everything is already\n",
-    "implicitly defined. In fact when you import the package, the plt object with all its\n",
-    "graphics capabilities have already been instantiated and ready to use. In fact, you simply\n",
-    "use the plot() function to pass the values to be plotted."
+    "Em Python, os construtores geralmente não são necessários; já está tudo\n",
+    "definido implicitamente. Na verdade, quando você importa o pacote, o objeto plt com todos os seus\n",
+    "recursos gráficos já foram instanciados e prontos para uso. Na verdade, você simplesmente\n",
+    "use a função plot() para passar os valores a serem plotados."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Thus, you can simply pass the values that you want to represent as a sequence of\n",
-    "integers."
+    "Assim, você pode simplesmente passar os valores que deseja representar como uma sequência de\n",
+    "inteiros."
    ]
   },
   {
