--- a/cp-07.ipynb
+++ b/cp-07.ipynb
@@ -336,11 +336,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As you can see, a Line2D object has been generated. The object is a line that\n",
-    "represents the linear trend of the points included in the chart.\n",
+    "Como você pode ver, um objeto Line2D foi gerado. O objeto é uma linha que\n",
+    "representa a tendência linear dos pontos incluídos no gráfico.\n",
     "\n",
-    "Now it is all set. You just have to give the command to show the plot using the show()\n",
-    "function."
+    "Agora está tudo pronto. Você só precisa dar o comando para mostrar o gráfico usando o show()\n",
+    "função."
    ]
   },
   {
@@ -356,15 +356,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The result will be the one shown in Figure 7-5. It looks just a window, called the\n",
-    "plotting window, with a toolbar and the plot represented within it, just as with MATLAB."
+    "O resultado será o mostrado na Figura 7-5. Parece apenas uma janela, chamada de\n",
+    "janela de plotagem, com uma barra de ferramentas e a plotagem representada dentro dela, assim como no MATLAB."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### The Plotting Window"
+    "#### A Janela de Plotagem"
    ]
   },
   {
@@ -382,30 +382,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you are using the IPython QtConsole, you may have noticed that after calling the\n",
-    "plot() function the chart is displayed directly without explicitly invoking the show()\n",
-    "function (see Figure 7-6)."
+    "Se você estiver usando o IPython QtConsole, deve ter notado que após chamar o\n",
+    "função plot() o gráfico é exibido diretamente sem invocar explicitamente o show()\n",
+    "função."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you pass only a list of numbers or an array to the plt.plot() function, matplotlib\n",
-    "assumes it is the sequence of y values of the chart, and it associates them to the natural\n",
-    "sequence of values x: 0,1,2,3, ... ."
+    "Se você passar apenas uma lista de números ou um array para a função plt.plot(), matplotlib\n",
+    "assume que é a sequência de valores y do gráfico, e os associa ao natural\n",
+    "seqüência de valores x: 0,1,2,3, ... ."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "Generally a plot represents value pairs (x, y), so if you want to define a chart\n",
-    "correctly, you must define two arrays, the first containing the values on the x-axis and\n",
-    "the second containing the values on the y-axis. Moreover, the plot() function can\n",
-    "accept a third argument, which describes the specifics of how you want the point to be\n",
-    "represented on the chart."
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
