--- a/cp-07.ipynb
+++ b/cp-07.ipynb
@@ -399,34 +399,40 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "#### Set the Properties of the Plot"
+    "Geralmente, um gráfico representa pares de valores (x, y), portanto, se você quiser definir um gráfico\n",
+    "corretamente, você deve definir duas matrizes, a primeira contendo os valores no eixo x e\n",
+    "o segundo contendo os valores no eixo y. Além disso, a função plot() pode\n",
+    "aceite um terceiro argumento, que descreve as especificidades de como você deseja que o ponto seja\n",
+    "representado no gráfico."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As you can see in Figure 7-6, the points were represented by a blue line. In fact, if you do\n",
-    "not specify otherwise, the plot is represented taking into account a default configuration\n",
-    "of the plt.plot() function:\n",
+    "#### Defina as propriedades do gráfico"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Os pontos foram representados por uma linha azul. Na verdade, se você fizer\n",
+    "não especifique o contrário, o gráfico é representado levando em consideração uma configuração padrão\n",
+    "da função plt.plot():\n",
     "\n",
-    "• The size of the axes matches perfectly with the range of the input data\n",
-    "• There is neither a title nor axis labels\n",
-    "• There is no legend\n",
-    "• A blue line connecting the points is drawn\n",
+    "• O tamanho dos eixos corresponde perfeitamente ao intervalo dos dados de entrada\n",
+    "• Não há título nem rótulos de eixo\n",
+    "• Não há legenda\n",
+    "• Uma linha azul conectando os pontos é desenhada\n",
     "\n",
-    "Therefore you need to change this representation to have a real plot in which each\n",
-    "pair of values (x, y) is represented by a red dot (see Figure 7-7).\n",
+    "Portanto, você precisa alterar essa representação para ter uma trama real em que cada\n",
+    "par de valores (x, y) é representado por um ponto vermelho.\n",
     "\n",
-    "If you’re working on IPython, close the window to get back to the active prompt for\n",
-    "entering new commands. Then you have to call back the show() function to observe the\n",
-    "changes made to the plot."
+    "Se você estiver trabalhando no IPython, feche a janela para voltar ao prompt ativo para\n",
+    "digitando novos comandos. Então você tem que chamar de volta a função show () para observar o\n",
+    "mudanças feitas na trama."
    ]
   },
   {
@@ -443,26 +449,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Instead, if you’re working on Jupyter QtConsole you see a different plot for each new\n",
-    "command you enter."
+    "Em vez disso, se você estiver trabalhando no Jupyter QtConsole, verá um gráfico diferente para cada novo\n",
+    "comando que você digita."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can define the range both on the x-axis and on the y-axis by defining the details\n",
-    "of a list [xmin, xmax, ymin, ymax] and then passing it as an argument to the axis()\n",
-    "function."
+    "Você pode definir o intervalo no eixo x e no eixo y definindo os detalhes\n",
+    "de uma lista [xmin, xmax, ymin, ymax] e, em seguida, passando-o como um argumento para o axis()\n",
+    "função."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "You can set several properties, one of which is the title that can be entered using the\n",
-    "title() function."
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
