--- a/cp-07.ipynb
+++ b/cp-07.ipynb
@@ -465,7 +465,10 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Você pode definir várias propriedades, uma das quais é o título que pode ser inserido usando o\n",
+    "função título()."
+   ]
   },
   {
    "cell_type": "code",
@@ -482,9 +485,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In Figure 7-8 you can see how the new settings made the plot more readable. In\n",
-    "fact, the end points of the dataset are now represented within the plot rather than at the\n",
-    "edges. Also the title of the plot is now visible at the top."
+    "Em fato, os pontos finais do conjunto de dados agora são representados dentro do gráfico, em vez de no\n",
+    "arestas. Além disso, o título do gráfico agora está visível na parte superior."
    ]
   },
   {
