--- a/cp-07.ipynb
+++ b/cp-07.ipynb
@@ -500,21 +500,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Even the matplot library, despite being a fully graphical library, has its foundation as\n",
-    "the NumPy library. In fact, you have seen so far how to pass lists as arguments, both to\n",
-    "represent the data and to set the extremes of the axes. Actually, these lists have been\n",
-    "converted internally in NumPy arrays.\n",
+    "Mesmo a biblioteca matplot, apesar de ser uma biblioteca totalmente gráfica, tem sua base como\n",
+    "a biblioteca NumPy. Na verdade, você viu até agora como passar listas como argumentos, tanto para\n",
+    "representar os dados e definir os extremos dos eixos. Na verdade, essas listas foram\n",
+    "convertido internamente em matrizes NumPy.\n",
     "\n",
-    "Therefore, you can directly enter NumPy arrays as input data. This array of data,\n",
-    "which have been processed by pandas, can be directly used with matplotlib without\n",
-    "further processing.\n",
+    "Portanto, você pode inserir matrizes NumPy diretamente como dados de entrada. Essa matriz de dados,\n",
+    "que foram processados por pandas, podem ser usados diretamente com matplotlib sem\n",
+    "processamento adicional.\n",
     "\n",
-    "As an example, you see how it is possible to plot three different trends in the same\n",
-    "plot (see Figure 7-9). You can choose for this example the sin() function belonging to\n",
-    "the math module. So you will need to import it. To generate points following a sinusoidal\n",
-    "trend, you will use the NumPy library. Generate a series of points on the x-axis using the\n",
-    "arange() function, while for the values on the y-axis you will use the map() function to\n",
-    "apply the sin() function on all the items of the array (without using a for loop)."
+    "Como exemplo, você vê como é possível traçar três tendências diferentes no mesmo\n",
+    "gráfico (veja a Figura 7-9). Você pode escolher para este exemplo a função sin() pertencente a\n",
+    "o módulo de matemática. Portanto, você precisará importá-lo. Para gerar pontos seguindo uma senoidal\n",
+    "tendência, você usará a biblioteca NumPy. Gere uma série de pontos no eixo x usando o\n",
+    "arange(), enquanto para os valores no eixo y você usará a função map() para\n",
+    "aplique a função sin() em todos os itens do array (sem usar um loop for)."
    ]
   },
   {
@@ -536,14 +536,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "As you can see in Figure 7-9, the plot represents the three different temporal trends\n",
-    "with three different colors and markers. In these cases, when the trend of a function is\n",
-    "so obvious, the plot is perhaps not the most appropriate representation, but it is better\n",
-    "to use the lines (see Figure 7-10). To differentiate the three trends with something other\n",
-    "than color, you can use the pattern composed of different combinations of dots and\n",
-    "dashes ( - and . )."
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
